...
    this.keyboardType = TextInputType.number,
    this.inputFormatters,
  });

  @override
  Widget build(BuildContext context) {
    final hint = documentKind == DocumentKind.cpf ? '000.000.000-00' : '00.000.000/0000-00';
    final defaultLabel = documentKind == DocumentKind.cpf ? 'Documento (CPF)' : 'Documento (CNPJ)';

    return FTextFormField(
      control: FTextFieldControl.managed(controller: controller),
      label: label != null ? Text(label!) : Text(defaultLabel),
      hint: hint,
...
