...
  late final TextEditingController _membershipDateController;
  late bool _exclusivelyMember;
  bool _saving = false;

  bool get _isEditing => widget.connection != null;
  String get _toastMessage => _isEditing ? 'Ligação atualizada com sucesso.' : 'Ligação criada com sucesso.';
  String get _title => _isEditing ? 'Editar Ligação' : 'Nova Ligação';

  @override
  void initState() {
    super.initState();
    _service = widget.connectionService ?? ConnectionService();
    _customerService = widget.customerService ?? CustomerService();
...
